# Intelligent-real-time-people-counter-camera-

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  manta-spec.md  requirements-dev.txt  setup.cfg  setup.py
camera/: detection.py  logger.py  main.py  reid.py  uploader.py
config/: config.example.yaml  config.rpi4.yaml  config.rpi5.yaml  config.webcam.yaml
debian/: README.md  changelog  control  manta-camera.install  manta-camera.postinst  manta-camera.postrm  manta-camera.service  rules
debian/scripts/: manta-setup
docs/: debian_package.md  developer-guide.md  developer_guide.md  face_detection.md  get-started.md  hardwares.md  insta360_setup.md  macos_testing.md  remote_config.md  rpi_configurations.md  secure_config.md  system_design.md  technical_specification.md
docs/d2/: README.md  camera-config.d2  component-diagram.d2  data-flow.d2  network-config.d2  system-architecture.d2
docs/hardwares/cameras/: recommed_camera.md
docs/hardwares/raspberrypi4/: README.md
firebase/: firebase_config.example.json  firebase_utils.py  storage_utils.py
models/: requirements.txt
n8n/: docker-compose.yml
n8n/workflows/: manta_notification.json
scripts/: generate_diagrams.sh  get_started.sh  install_hooks.sh  rpi_setup.sh
tests/: README.md  macos_test_helper.py  run_tests_macos.py
tests/camera/: test_camera.py  test_pi_specific.py
tests/firebase/: send_test_event.py  test_firebase.py
tests/mock/: patch_picamera.py
utils/: camera_utils.py  config_utils.py  encrypt_config.py  face_utils.py  remote_config.py  vector_utils.py  webcam_utils.py
(+4 files in other folders)
