[metadata]
name = manta-camera
version = 0.1.0
description = Person detection and tracking system for Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
author = BemindTech
author_email = info@bemind.tech
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
url = https://github.com/BemindTech/bmt-manta-camera

[options]
packages = find:
python_requires = >=3.9
zip_safe = False

[flake8]
max-line-length = 100
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False

[isort]
profile = black
line_length = 100

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*